--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.8",
+    "@apollo/client": "^3.5.7",
+    "graphql": "^16.2.0",
+    "next": "^10.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8"
+    "eslint-config-next": "^0.2.4"
   }
 }
